skeleton replace. Also login/register

--- a/android_app/app/src/main/res/layout/activity_login.xml
+++ b/android_app/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="Username" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
