--- a/android_app/app/src/main/res/layout/fragment_profile.xml
+++ b/android_app/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
             <RelativeLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
-                android:layout_height="146dp"
+                android:layout_height="100dp"
                 android:orientation="vertical"
                 android:layout_marginTop="@dimen/activity_vertical_margin">
 
@@ -66,7 +66,9 @@
                     android:layout_below="@+id/change_button"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignBottom="@+id/profileImage" />
+                    android:layout_alignBottom="@+id/profileImage"
+                    android:layout_alignLeft="@+id/change_button"
+                    android:layout_alignStart="@+id/change_button" />
 
 
             </RelativeLayout>
@@ -76,7 +78,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/detailsLayout"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:layout_gravity="top">
 
                 <LinearLayout
                     android:orientation="horizontal"
