--- a/android_app/app/src/main/res/layout/fragment_profile.xml
+++ b/android_app/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/activity_vertical_margin"
     tools:context="unimelb.edu.instamelb.fragments.FragmentProfile"
+
     >
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -23,6 +24,7 @@
                     android:id="@+id/profileImage"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:transitionName="avatar"
                     android:src="@drawable/ic_contact_picture"/>
 
                 <TextView
