--- a/android_app/app/src/main/res/values/dimens.xml
+++ b/android_app/app/src/main/res/values/dimens.xml
@@ -13,5 +13,6 @@
     <dimen name="size_byte">8dp</dimen>
     <dimen name="movie_thumbnail_width">54dp</dimen>
     <dimen name="movie_thumbnail_height">80dp</dimen>
-
+    <dimen name="spacing_small">8dp</dimen>
+    <dimen name="spacing_large">16dp</dimen>
 </resources>
