--- a/android_app/app/src/main/res/layout/userfeed_item.xml
+++ b/android_app/app/src/main/res/layout/userfeed_item.xml
@@ -98,7 +98,7 @@
                     android:scaleType="centerCrop"
                     android:layout_alignParentTop="false"
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
+                    android:layout_height="230dp"
                     android:layout_below="@+id/linearLayout" />
 
             </RelativeLayout>
@@ -107,7 +107,7 @@
                 android:id="@+id/photo_desc"
                 android:maxLines="2"
                 android:layout_below="@+id/feed_header"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"/>
@@ -115,23 +115,24 @@
             android:orientation="vertical"
             android:layout_below="@+id/photo_desc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="wrap_content"
+            android:id="@+id/comments">
+            <View android:layout_gravity="bottom" android:id="@+id/divider1" android:background="@color/colorGray" android:layout_width="match_parent" android:layout_height="2dp" />
             <Button
                 android:id="@+id/load_more"
                 android:text="LOAD MORE COMMENTS"
                 android:background="#00000000"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp" />
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
+                <View android:layout_gravity="bottom" android:id="@+id/divider2" android:background="@color/colorGray" android:layout_width="match_parent" android:layout_height="2dp" />
                 <ImageView
                     android:id="@+id/comment_photo"
                     android:background="@drawable/circle_white"
