--- a/android_app/app/src/main/res/layout/drawer_header.xml
+++ b/android_app/app/src/main/res/layout/drawer_header.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <com.pkmmte.view.CircularImageView
-        android:id="@+id/image_profile"
+        android:id="@+id/header_image_profile"
         android:layout_centerVertical="true"
         android:layout_width="72dp"
         android:layout_height="72dp"
@@ -23,7 +23,7 @@
 
     <LinearLayout
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/image_profile"
+        android:layout_toRightOf="@+id/header_image_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
@@ -43,7 +43,8 @@
             android:text="User"
             android:textColor="@android:color/white"
             android:gravity="right"
-            style="@style/TextAppearance.AppCompat.Medium" />
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:id="@+id/header_username" />
 
         <View
             android:layout_width="match_parent"
@@ -56,7 +57,8 @@
             android:text="user@gmail.com"
             android:textColor="@android:color/white"
             android:gravity="right"
-            style="@style/TextAppearance.AppCompat.Small" />
+            style="@style/TextAppearance.AppCompat.Small"
+            android:id="@+id/header_email" />
     </LinearLayout>
 
 </RelativeLayout>
