--- a/android_app/app/src/main/res/layout/fragment_photo.xml
+++ b/android_app/app/src/main/res/layout/fragment_photo.xml
@@ -15,25 +15,30 @@
         android:background="@color/colorPrimaryDark"
         android:layout_gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="EDIT PHOTO..."
-            android:id="@+id/current_selection"
-            android:layout_weight="50"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/colorAccent" />
+            android:text="CANCEL"
+            android:id="@+id/back_button"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="20dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="UPLOAD"
             android:id="@+id/upload_button"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/abc_text_size_large_material" />
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:gravity="center_vertical|right"
+            android:paddingRight="20dp"
+            android:singleLine="true" />
 
     </LinearLayout>
 
@@ -45,14 +50,15 @@
         android:layout_gravity="top">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:text="  BRIGHTNESS"
             android:id="@+id/brightnessText"
             android:layout_weight="50"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorAccent"
+            android:paddingLeft="10dp" />
 
         <SeekBar
             android:layout_width="200dp"
@@ -70,14 +76,15 @@
         android:background="@color/colorPrimary">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:text="  CONTRAST"
             android:id="@+id/contrastText"
             android:layout_weight="50"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorAccent"
+            android:paddingLeft="10dp" />
 
         <SeekBar
             android:layout_width="200dp"
