--- a/android_app/app/src/main/res/menu/menu_feed.xml
+++ b/android_app/app/src/main/res/menu/menu_feed.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="unimelb.edu.instamelb.activities.ActivityMain">
     <item
-        android:id="@+id/action_logout"
+        android:id="@+id/menu_feed_sort"
         android:icon="@drawable/ic_next"
-        android:orderInCategory="100"
-        android:title="@string/logout"
+        android:orderInCategory="200"
+        android:title="Set to 'sort by location'"
         app:showAsAction="never" />
 </menu>
