--- a/android_app/app/src/main/res/layout/fragment_photo.xml
+++ b/android_app/app/src/main/res/layout/fragment_photo.xml
@@ -13,24 +13,41 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/colorPrimaryDark"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/header"
+        android:focusableInTouchMode="true">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CANCEL"
-            android:id="@+id/back_button"
+            android:text="@string/edit"
+            android:id="@+id/edit_button"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/abc_text_size_large_material"
             android:gravity="left|center_vertical"
-            android:paddingLeft="20dp" />
+            android:paddingLeft="20dp"
+            android:clickable="true"
+            android:enabled="true" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="UPLOAD"
+            android:text="@string/caption"
+            android:id="@+id/caption_button"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:gravity="center_vertical|center_horizontal"
+            android:enabled="true"
+            android:clickable="true" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/upload"
             android:id="@+id/upload_button"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
@@ -38,8 +55,38 @@
             android:textSize="@dimen/abc_text_size_large_material"
             android:gravity="center_vertical|right"
             android:paddingRight="20dp"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:enabled="true"
+            android:clickable="true" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/addCommentLayout">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/caption_prompt"
+            android:id="@+id/captionHeader"
+            android:textColor="@color/background_material_light"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:background="@color/colorPrimary"
+            android:padding="10dp"
+            android:singleLine="false"
+            android:password="false" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/captionText"
+            android:editable="true"
+            android:padding="10dp"
+            android:textColor="@color/colorPrimaryDark" />
     </LinearLayout>
 
     <LinearLayout
@@ -47,13 +94,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:id="@+id/brightnessLayout">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            android:text="  BRIGHTNESS"
+            android:text="@string/brightness"
             android:id="@+id/brightnessText"
             android:layout_weight="50"
             android:layout_gravity="center_vertical"
@@ -73,13 +121,14 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:id="@+id/contrastLayout">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            android:text="  CONTRAST"
+            android:text="@string/contrast"
             android:id="@+id/contrastText"
             android:layout_weight="50"
             android:layout_gravity="center_vertical"
@@ -106,16 +155,12 @@
             <!--android:clickable="true" />-->
     </LinearLayout>
 
-    <Gallery
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gallery" />
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:id="@+id/filterThumbnailLayout">
 
         <ImageView
             android:layout_width="fill_parent"
@@ -160,13 +205,14 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:id="@+id/filterIDLayout">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="RESET"
+            android:text="@string/reset"
             android:id="@+id/textView4"
             android:layout_weight="0.25"
             android:gravity="center_vertical|center_horizontal"
@@ -176,7 +222,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="GRAY"
+            android:text="@string/gray"
             android:id="@+id/textView"
             android:layout_weight="0.25"
             android:gravity="center_vertical|center_horizontal"
@@ -186,7 +232,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="WARM"
+            android:text="@string/warm"
             android:id="@+id/textView2"
             android:layout_weight="0.25"
             android:gravity="center_vertical|center_horizontal"
@@ -196,7 +242,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="COOL"
+            android:text="@string/cool"
             android:id="@+id/textView3"
             android:layout_weight="0.25"
             android:gravity="center_vertical|center_horizontal"
