--- a/android_app/app/src/main/res/layout/fragment_photo.xml
+++ b/android_app/app/src/main/res/layout/fragment_photo.xml
@@ -13,72 +13,127 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/colorPrimaryDark"
-        android:layout_gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="EDIT PHOTO"
-            android:id="@+id/current_selection"
-            android:layout_weight="50"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/colorAccent" />
+        android:layout_gravity="center"
+        android:id="@+id/header"
+        android:focusableInTouchMode="true">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="UPLOAD"
+            android:text="@string/edit"
+            android:id="@+id/edit_button"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="20dp"
+            android:clickable="true"
+            android:enabled="true" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/caption"
+            android:id="@+id/caption_button"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:gravity="center_vertical|center_horizontal"
+            android:enabled="true"
+            android:clickable="true" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/upload"
             android:id="@+id/upload_button"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/abc_text_size_large_material" />
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:gravity="center_vertical|right"
+            android:paddingRight="20dp"
+            android:singleLine="true"
+            android:enabled="true"
+            android:clickable="true" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/addCommentLayout">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/caption_prompt"
+            android:id="@+id/captionHeader"
+            android:textColor="@color/background_material_light"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:background="@color/colorPrimary"
+            android:padding="10dp"
+            android:singleLine="false"
+            android:password="false" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/captionText"
+            android:editable="true"
+            android:padding="10dp"
+            android:textColor="@color/colorPrimaryDark" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:id="@+id/brightnessLayout">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="BRIGHTNESS"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:text="@string/brightness"
             android:id="@+id/brightnessText"
             android:layout_weight="50"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorAccent"
+            android:paddingLeft="10dp" />
 
         <SeekBar
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/brightnessSeekBar"
             android:max="510"
-            android:progress="255"
-            android:layout_gravity="center_vertical" />
+            android:progress="255" />
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimary">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:id="@+id/contrastLayout">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="CONTRAST"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:text="@string/contrast"
             android:id="@+id/contrastText"
             android:layout_weight="50"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorAccent"
+            android:paddingLeft="10dp" />
 
         <SeekBar
             android:layout_width="200dp"
@@ -100,31 +155,26 @@
             <!--android:clickable="true" />-->
     </LinearLayout>
 
-    <Gallery
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gallery" />
-
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:id="@+id/filterThumbnailLayout">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:id="@+id/photoThumbnail"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_action_photo"
             android:clickable="true"
-            android:layout_weight="0.25" />
+            android:layout_weight="0.25"
+            android:scaleType="fitXY"/>
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:id="@+id/thumbnailFilter1"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_action_photo"
@@ -132,9 +182,8 @@
             android:layout_weight="0.25" />
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:id="@+id/thumbnailFilter2"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_action_photo"
@@ -142,9 +191,8 @@
             android:layout_weight="0.25" />
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:id="@+id/thumbnailFilter3"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_action_photo"
@@ -153,24 +201,68 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:id="@+id/filterIDLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/reset"
+            android:id="@+id/textView4"
+            android:layout_weight="0.25"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorGray" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/gray"
+            android:id="@+id/textView"
+            android:layout_weight="0.25"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorGray" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/warm"
+            android:id="@+id/textView2"
+            android:layout_weight="0.25"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorGray" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/cool"
+            android:id="@+id/textView3"
+            android:layout_weight="0.25"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorGray" />
+
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/photoPreview"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/sonic2" />
+            android:clickable="true" />
 
     </FrameLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></LinearLayout>
 
 
 </LinearLayout>
