--- a/android_app/app/src/main/res/layout/fragment_activity.xml
+++ b/android_app/app/src/main/res/layout/fragment_activity.xml
@@ -1,15 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="unimelb.edu.instamelb.fragments.FragmentActivity">
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="This is the activity fragment" />
-
-</FrameLayout>
+        android:layout_height="match_parent"/>
+</LinearLayout>
