--- a/android_app/app/src/main/res/values/dimens.xml
+++ b/android_app/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="movie_thumbnail_height">80dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
     <dimen name="spacing_large">16dp</dimen>
+    <dimen name="list_item_height">72dp</dimen>
 </resources>
