--- a/android_app/app/src/main/res/layout/fragment_photo.xml
+++ b/android_app/app/src/main/res/layout/fragment_photo.xml
@@ -133,7 +133,7 @@
 
         <TextView
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/captionText"
             android:editable="true"
