--- a/android_app/app/src/main/res/layout/fragment_photo.xml
+++ b/android_app/app/src/main/res/layout/fragment_photo.xml
@@ -184,6 +184,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/brightnessSeekBar"
+            android:layout_gravity="center_vertical"
             android:max="260"
             android:progress="130" />
 
