--- a/android_app/app/src/main/res/layout/fragment_choose_photo.xml
+++ b/android_app/app/src/main/res/layout/fragment_choose_photo.xml
@@ -20,11 +20,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="TAKE NEW PHOTO"
+        android:drawableLeft="@drawable/ic_camera"
         android:id="@+id/button_take_new_photo"
         android:background="@color/colorPrimary"
         android:textColor="@color/colorAccent"
         android:clickable="true"
-        android:layout_margin="2dp"
+        android:layout_margin="0dp"
+        android:elevation="4dp"
         android:layout_gravity="center_horizontal"
         android:elegantTextHeight="false"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
@@ -47,12 +49,14 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="CHOOSE PHOTO FROM LIBRARY"
+        android:text="CHOOSE FROM LIBRARY"
+        android:drawableLeft="@drawable/ic_folder"
         android:id="@+id/button_choose_from_library"
         android:background="@color/colorPrimary"
         android:textColor="@color/colorAccent"
         android:clickable="true"
-        android:layout_margin="2dp"
+        android:layout_margin="0dp"
+        android:elevation="4dp"
         android:layout_gravity="center_horizontal"
         android:elegantTextHeight="false"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
